# multiraceline-implementation

./: README.md
multiraceline_racing/: CMakeLists.txt  package.xml
multiraceline_racing/config/config/: overtaking_zones.yaml  params.yaml
multiraceline_racing/include/multiraceline_racing/: frenet_frame.hpp  opponent_detector.hpp  opponent_tracker.hpp  pure_pursuit_controller.hpp  raceline_library.hpp  tactical_state_machine.hpp
multiraceline_racing/launch/launch/: pure_pursuit_baseline.launch.py  test_detection.launch.py
multiraceline_racing/src/: frenet_frame.cpp  opponent_detector.cpp  opponent_tracker.cpp  pure_pursuit_controller.cpp  raceline_library.cpp  tactical_racing_node.cpp  tactical_state_machine.cpp
multiraceline_racing/src/config/: params.yaml
multiraceline_racing/src/launch/: pure_pursuit_baseline.launch.py  tactical_race.launch.py
